[gd_scene load_steps=6 format=3 uid="uid://ck5j4x8kk8ned"]

[ext_resource type="Script" uid="uid://cet38fah70v1s" path="res://scripts/levels/level_1.gd" id="1_6iamk"]
[ext_resource type="PackedScene" uid="uid://bu6ohf1j8xcl3" path="res://scenes/characters/player.tscn" id="1_ksju7"]
[ext_resource type="PackedScene" uid="uid://pidopnnw6for" path="res://scenes/static_bodies/bullet.tscn" id="3_nsrm0"]
[ext_resource type="Texture2D" uid="uid://bwo1a0lod27l" path="res://icon.svg" id="4_x42e6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u6i3"]
size = Vector2(833, 600.875)

[node name="Level1" type="Node2D"]
script = ExtResource("1_6iamk")
PlayerScene = ExtResource("1_ksju7")
BulletScene = ExtResource("3_nsrm0")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="PlayerSpawnPoint" type="Marker2D" parent="SpawnPoints"]
position = Vector2(609, 385)

[node name="FloorTemp" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorTemp"]
position = Vector2(610.5, 688.4375)
shape = SubResource("RectangleShape2D_7u6i3")

[node name="Sprite2D" type="Sprite2D" parent="FloorTemp"]
position = Vector2(608.99994, 792.99994)
scale = Vector2(6.5390625, 6.34375)
texture = ExtResource("4_x42e6")

[node name="SpawnedBullets" type="Node2D" parent="."]
